# jolie

./: .gitignore  frames_2025-05-10_09.52.54.gv
jolie_humble/src/jolie_bringup/: CMakeLists.txt  package.xml
jolie_humble/src/jolie_bringup/launch/: pilot.launch.py  real_robot.launch.py  simulated_robot.launch.py
jolie_humble/src/jolie_description/: CMakeLists.txt  README.md  package.xml
jolie_humble/src/jolie_description/launch/: display.launch.py  gazebo.launch.py
jolie_humble/src/jolie_description/rviz/: jolie_description.rviz
jolie_humble/src/jolie_description/urdf/: nebula_3wd.urdf.xacro  nebula_4wd.urdf.xacro  nebula_4wd_ros2_control.xacro
jolie_humble/src/jolie_firmware/: CMakeLists.txt  jolie_interface.xml  package.xml
jolie_humble/src/jolie_firmware/include/jolie_firmware/: jolie_base_interface.hpp
jolie_humble/src/jolie_firmware/launch/: hardware_interface.launch.py
jolie_humble/src/jolie_firmware/src/: jolie_base_interface.cpp
jolie_humble/src/jolie_localization/: CMakeLists.txt  package.xml
jolie_humble/src/jolie_localization/config/: amcl.yaml  ekf.yaml
jolie_humble/src/jolie_localization/launch/: global_localization.launch.py  local_localization.launch.py
jolie_humble/src/jolie_mapping/: CMakeLists.txt  package.xml
jolie_humble/src/jolie_mapping/config/: slam_toolbox.yaml
jolie_humble/src/jolie_mapping/launch/: slam.launch.py
jolie_humble/src/jolie_navigation/: CMakeLists.txt  package.xml
jolie_humble/src/jolie_navigation/launch/: navigation.launch.py
jolie_humble/src/jolie_utility/: CMakeLists.txt  package.xml
jolie_humble/src/jolie_utility/src/: twist_converter_node.cpp
jolie_humble/src/sirius_controller/: CMakeLists.txt  package.xml
jolie_humble/src/sirius_controller/config/: joy_teleop.yaml  sirius_controllers.yaml  sirius_controllers_sim.yaml  twist_mux.yaml
jolie_humble/src/sirius_controller/launch/: controller.launch.py  (+2 more)
jolie_log/: KINECT.md  README.md  imu.md
jolie_platformio/esp32s3_base/: base.ino  base_checkup.ino  micro-ros_publisher.ino
jolie_platformio/esp32s3_base/feature_test/: rgb_led.ino
jolie_platformio/esp32s3_base/src/: main.cpp
jolie_platformio/platformio/: platformio.ini
(+23 files in other folders)
